# G.R.I.M

./: .gitattributes  .gitignore  .gitmodules  .gitmodules.bak  CMakeLists.txt  ErrorCodes.json  Home  README.md  Variable Definitions.txt  ai.cpp  ai.hpp  ai_config.json  ai_style.cpp  aliases.cpp  aliases.hpp  app_aliases.json  blank_window  blank_window.cpp  bootstrap.cpp  bootstrap.hpp  bootstrap_config.cpp  bootstrap_config.hpp  clean_log.txt  commands.cpp  commands.hpp  compile_commands.json  console_history.cpp  console_history.hpp  error_manager.cpp  error_manager.hpp  errors.json  file_list.txt  glib-genmarshal-script.py  glib-gettextize  glib-mkenums-script.py  grim_memory.json  gtester-report-script.py  intent.hpp  keep.txt  list_devices.cpp  (+37 more)
cache/numba/core_376ccb7a8a652c0418c03b219f75ef457b61c1a0/: audio._zc_wrapper-1161.py310.1.nbc  audio._zc_wrapper-1161.py310.2.nbc  audio._zc_wrapper-1161.py310.nbi  guf-audio._zc_wrapper-1161.py310.1.nbc  guf-audio._zc_wrapper-1161.py310.2.nbc  guf-audio._zc_wrapper-1161.py310.nbi  guf-pitch._pi_wrapper-445.py310.1.nbc  guf-pitch._pi_wrapper-445.py310.2.nbc  guf-pitch._pi_wrapper-445.py310.nbi  pitch._pi_wrapper-445.py310.1.nbc  pitch._pi_wrapper-445.py310.2.nbc  pitch._pi_wrapper-445.py310.nbi
cache/numba/util_223fe6e7d17d99a5794495d8d60ff698833a7dc8/: guf-utils._localmax-1063.py310.1.nbc  guf-utils._localmax-1063.py310.2.nbc  guf-utils._localmax-1063.py310.3.nbc  guf-utils._localmax-1063.py310.4.nbc  guf-utils._localmax-1063.py310.5.nbc  guf-utils._localmax-1063.py310.nbi  guf-utils._localmin-1080.py310.1.nbc  guf-utils._localmin-1080.py310.2.nbc  guf-utils._localmin-1080.py310.3.nbc  guf-utils._localmin-1080.py310.4.nbc  guf-utils._localmin-1080.py310.5.nbc  guf-utils._localmin-1080.py310.nbi  utils._cabs2-2472.py310.1.nbc  utils._cabs2-2472.py310.2.nbc  utils._cabs2-2472.py310.nbi  utils._localmax-1063.py310.1.nbc  utils._localmax-1063.py310.2.nbc  utils._localmax-1063.py310.3.nbc  utils._localmax-1063.py310.4.nbc  utils._localmax-1063.py310.5.nbc  utils._localmax-1063.py310.nbi  utils._localmin-1080.py310.1.nbc  utils._localmin-1080.py310.2.nbc  utils._localmin-1080.py310.3.nbc  utils._localmin-1080.py310.4.nbc  utils._localmin-1080.py310.5.nbc  utils._localmin-1080.py310.nbi  utils._phasor_angles-2524.py310.1.nbc  utils._phasor_angles-2524.py310.2.nbc  utils._phasor_angles-2524.py310.nbi
commands/: commands_ai.cpp  commands_ai.hpp  commands_aliases.cpp  commands_aliases.hpp  commands_core.cpp  commands_core.hpp  commands_filesystem.cpp  commands_filesystem.hpp  commands_helpers.cpp  commands_helpers.hpp  commands_interface.cpp  commands_interface.hpp  commands_memory.cpp  commands_memory.hpp  commands_system.cpp  commands_system.hpp  commands_timers.cpp  commands_timers.hpp  commands_voice.cpp  commands_voice.hpp
device_setups/: audio_devices.cpp  audio_devices.hpp
nlp/: nlp.hpp  nlp_rules.json
popup_ui/: pop_ui.cpp  popup_anim.cpp  popup_anim.hpp  popup_renderer.cpp  popup_renderer.hpp  popup_ui.hpp  popup_window.cpp  popup_window.hpp
resources/: app_aliases.json  errors.json  nlp_rules.json  popup.frag  popup.vert  resources.cpp  resources.hpp  synonyms.json  test_alpha.b64
resources/Resources/models/tts/tts_models--en--vctk--vits/: config.json
resources/models/tts/tts_models--en--vctk--vits/: config.json
resources/python/: coqui_bridge.py  tts_bridge.py
resources/shaders/: fs_sprite.sc  vs_sprite.sc
scripts/: install_cuda.ps1  wakeword_detector.py
voice/: voice.cpp  voice.hpp  voice_speak.cpp  voice_speak.hpp  voice_stream.cpp  voice_stream.hpp
wake/: wake.cpp  wake.hpp  wake_key.cpp  wake_key.hpp  wake_voice.cpp  wake_voice.hpp
